--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -6,14 +6,14 @@
 <div id="add" style="display: none;">
   <div class="form">
     <h3>Add A User</h3>
-    <%= start_form_tag :action=>"create" %>
+    <% form_for :user, :url => users_path do |user| %>
     <div class="form_container">
-      <%= render(:partial=>"form") %>
+      <%= render :partial => 'form', :locals => {:user => user} %>
       <div class="operations">
         <input type="submit" value="Add User"/> or <%= link_to_function "Cancel", "new Effect.BlindUp('add')" %>
       </div>
     </div>
-    <%= end_form_tag %>
+    <% end %>
   </div>
 </div>
 <div class="block">
