--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,12 +1,8 @@
 <dl>
-  <dt><label for="feed_name">Name:</label></dt>
-  <dd><%= text_field "user", "name", "size"=>"30" %></dd>
   <dt><label for="feed_author">Email:</label></dt>
-  <dd><%= text_field "user", "email", "size"=>"30" %></dd>
-  <dt><label for="user_login">Login:</label></dt>
-  <dd><%= text_field "user", "login" %></dd>
+  <dd><%= user.text_field :email %></dd>
   <dt><label for="feed_url">Password:</label></dt>
-  <dd><%= password_field "user", "password" %></dd>
+  <dd><%= user.password_field :password %></dd>
   <dt><label for="feed_blog_url">Confirm Password:</label></dt>
-  <dd><%= password_field "user", "password_confirmation" %></dd>
+  <dd><%= user.password_field :password_confirmation %></dd>
 </dl>
