--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -1,7 +1,6 @@
 <div class="user">
-  <h4><%= link_to h("#{user.name}"), {:action => "view", :id => user.id} %></h4>
   <p>
   <%= user.email %><br/>
   </p>
-  <p><%= link_to 'Edit', :action => 'edit', :id => user  %><strong> |</strong> <%= link_to 'Delete', {:action => 'delete', :id => user}, :confirm=>"Are you sure?" %></p>
+  <p><%= link_to 'Edit', edit_admin_user_path(user) %><strong> |</strong> <%= link_to 'Delete', admin_user_path(user), :method => :delete, :confirm=>"Are you sure?" %></p>
 </div>
