--- a/app/views/show/_post.rhtml
+++ b/app/views/show/_post.rhtml
@@ -4,7 +4,7 @@
 	<p class="metadata">Posted by <%= h post.author || post.feed.author %> <%= distance_of_time_in_words_to_now post.created_at %> ago</p>
 	<%= CGI::unescapeHTML(post.body) %>
 	<% if post.tags.size != 0 %>
-	<div style="text-align: right;">Tags: <%= post.tags.collect {|t| link_to t.name, :controller=>"tags", :action=>"view", :id=>t.name}.join(", ") -%></div>
+	<div style="text-align: right;">Tags: <%= post.tags.collect {|t| link_to t.name, :controller => 'tags', :action => 'show', :id => t.name}.join(", ") -%></div>
 	<% end %>
 </div>
 <% end %>
