--- a/app/views/feeds/list.html.erb
+++ b/app/views/feeds/list.html.erb
@@ -1,3 +1,3 @@
 <% for feed in @feeds %>
-<small>(<%= link_to "+", :controller => "show", :action => "feed", :id => feed.id %>)</small>&nbsp;<%= link_to feed.title, feed.link %><br/>
+<small>(<%= link_to "+", feed_path(feed) %>)</small>&nbsp;<%= link_to feed.title, feed.link %><br/>
 <% end %>
